fix shift

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ body {
 }
 
 .author-col4 {
-    width: 33.0%;
+    width: 30.0%;
 }
 
 .affiliation-col {
